--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
       }
       .hero-section {
         position: relative;
-        background: url("images/about_us.avif") no-repeat center center/cover;
+        background: url("about_us.avif") no-repeat center center/cover;
         height: 70vh;
         display: flex;
         justify-content: center;
@@ -141,7 +141,7 @@
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="#">
           <img
-            src="images/logo.png"
+            src="logo.png"
             alt="Logo"
             class="rounded-circle"
             width="40"
