--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="#">
           <img
-            src="images/logo.png"
+            src="logo.png"
             alt="Logo"
             class="rounded-circle"
             width="40"
